// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly search div 1`] = `
<Fragment>
  <h2
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <img
      alt="youtube logo"
      src="https://www.thatitguy.net/wp-content/uploads/2018/08/1280px-Logo_of_YouTube_2015-2017.svg.png"
      style={
        Object {
          "height": "100px",
          "justifyContent": "center",
          "width": "200px",
        }
      }
    />
  </h2>
  <div
    className="search-bar ui segment"
    data-auto-id="search-div"
  >
    <form
      className="ui form"
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          htmlFor="video-search"
        >
          Video Search
        </label>
        <input
          data-auto-id="input-field"
          name="video-search"
          onChange={[Function]}
          placeholder="Search.."
          type="text"
        />
      </div>
      <div
        className="button"
      >
        <button
          className="ui black basic button"
          data-auto-id="submit-button"
          onClick={[Function]}
        >
          Search
        </button>
      </div>
    </form>
  </div>
</Fragment>
`;

exports[`should trigger videos action correctly after submit 1`] = `
<SearchBar>
  <h2
    style={
      Object {
        "textAlign": "center",
      }
    }
  >
    <img
      alt="youtube logo"
      src="https://www.thatitguy.net/wp-content/uploads/2018/08/1280px-Logo_of_YouTube_2015-2017.svg.png"
      style={
        Object {
          "height": "100px",
          "justifyContent": "center",
          "width": "200px",
        }
      }
    />
  </h2>
  <div
    className="search-bar ui segment"
    data-auto-id="search-div"
  >
    <form
      className="ui form"
      onSubmit={[Function]}
    >
      <div
        className="field"
      >
        <label
          htmlFor="video-search"
        >
          Video Search
        </label>
        <input
          data-auto-id="input-field"
          name="video-search"
          onChange={[Function]}
          placeholder="Search.."
          type="text"
        />
      </div>
      <div
        className="button"
      >
        <button
          className="ui black basic button"
          data-auto-id="submit-button"
          onClick={[Function]}
        >
          Search
        </button>
      </div>
    </form>
  </div>
</SearchBar>
`;
